# serializer version: 1
# name: test_nonreserved_keyword_ok[select_kw_date_alias][sql]
  'SELECT abc date'
# ---
# name: test_nonreserved_keyword_ok[select_kw_date_alias][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	abc
          as_alias
            ident	date
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_date_column][sql]
  'SELECT date abc'
# ---
# name: test_nonreserved_keyword_ok[select_kw_date_column][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	date
          as_alias
            ident	abc
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_date_double][sql]
  'SELECT date date'
# ---
# name: test_nonreserved_keyword_ok[select_kw_date_double][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	date
          as_alias
            ident	date
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_format_alias][sql]
  'SELECT abc format'
# ---
# name: test_nonreserved_keyword_ok[select_kw_format_alias][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	abc
          as_alias
            ident	format
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_format_column][sql]
  'SELECT format abc'
# ---
# name: test_nonreserved_keyword_ok[select_kw_format_column][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	format
          as_alias
            ident	abc
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_percent_alias][sql]
  'SELECT abc percent'
# ---
# name: test_nonreserved_keyword_ok[select_kw_percent_alias][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	abc
          as_alias
            ident	percent
  
  '''
# ---
# name: test_nonreserved_keyword_ok[select_kw_percent_column][sql]
  'SELECT percent abc'
# ---
# name: test_nonreserved_keyword_ok[select_kw_percent_column][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	percent
          as_alias
            ident	abc
  
  '''
# ---
